# Kaleidoscode

./: CMakeLists.txt
include/: ast.h  jit.h  log.h  parser.h  token.h
main/: 01_parsing.cpp  02_llvm_ir.cpp  03_optimization.cpp  04_jit.cpp
src/: ast.cpp  parser.cpp
